<resources>
  <string name="app_name">LOOP UI&amp;UX</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="navbar_text">This is a challenge with the objective of testing my kotlin and UI/UX skills.\n\n\n The goal of the app is to be a travel companion: take a photo, add a title and a description, save it, and use it as a travel diary</string>
    <string name="url">Url</string>
  <string name="upload">Upload</string>
  <string name="choose_a_photo">Choose a photo</string>
    <string name="summary">Summary</string>
  <string name="title">Title</string>
    <string name="url_not_valid">URL not valid. Try again please</string>
  <string name="url_error_loading">Error uploading URL. Try again please</string>

  <string name="lorem_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis ex vitae sagittis viverra. Morbi convallis, mi sed placerat auctor, quam risus faucibus ligula, at maximus ligula massa nec lectus. Pellentesque a dapibus risus. Sed tristique malesuada maximus. Duis id nisi vitae neque porttitor porttitor pulvinar et lectus. Praesent id augue sit amet quam semper ullamcorper. Etiam dignissim tortor erat, ac interdum tellus lacinia at. Pellentesque laoreet egestas nisi. In euismod ligula eu risus commodo tincidunt. Mauris facilisis ex ut magna finibus, id tempus magna congue.Morbi ut tincidunt quam, vitae sollicitudin nibh. Quisque cursus iaculis nunc non mattis. Pellentesque elementum fermentum efficitur. Etiam aliquam ante ac felis feugiat, ac sodales risus semper. Pellentesque laoreet nisl non quam pretium convallis. Vivamus id quam massa. Maecenas turpis mi, maximus nec tempor ut, egestas eu ipsum. Aenean vehicula diam nisi, eget consequat diam ultricies at.</string>
  <string name="add_a_memory">Add a Memory</string>
  <string name="please_pick_a_photo">Please pick a photo</string>
  <string name="error_field">Please fill the field</string>
  <string name="deleting_memory">Deleting a travel memory</string>
  <string name="deleting_memory_message">Are you sure you want to delete this memory?\nThere is no way back!</string>

</resources>